bynkc/tests/fixtures/negative/266_ws_connection_compare/src/s.bynk
context s

type UserId = opaque String
type ServerFrame = { text: String }

-- "Broadcast to everyone but the sender" must filter by **key** (the sender's id),
-- not by connection identity: `Connection` is non-comparable by design (ADR 0130).
-- Comparing connections is `bynk.types.held_not_comparable`.
agent Room {
  key id: UserId
  store conns: Map[UserId, Connection[ServerFrame]]
  on call bcastExceptSelf(mine: Connection[ServerFrame]) -> Effect[()] {
    let _ <- conns.filter((c: Connection[ServerFrame]) => c != mine).forEach((c: Connection[ServerFrame]) => c.send(ServerFrame { text: "x" }))
    let _ <- conns.put(id, mine)
    ()
  }
}
